fix another bugs

--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -85,9 +85,8 @@
                             </div>
                             <div class="stats__item-content">
                                 <h3 class="stats__item-title">
-                                    <span>Умка решает любые поставленные задачи</span> от заливки льда, до мойки
-                                    дорог
-                                    и чистки снега
+                                    <span>Умка решает любые поставленные задачи</span><br/> 
+                                    от заливки льда, до мойки дорог и&nbsp;чистки&nbsp;снега
                                 </h3>
                             </div>
                         </div>
@@ -1129,7 +1128,7 @@
                 <div class="all__title">
                     <h2>
                         Сервисные центры
-                        во всех уголках страны
+                        во&nbsp;всех&nbsp;уголках страны
                     </h2>
                 </div>
                 <div class="all__container">
