--- a/src/partials/components/form.hbs
+++ b/src/partials/components/form.hbs
@@ -5,7 +5,7 @@
                 <div class='callback__content-container__first'>
                     <h2>Свяжитесь с нами</h2>
                     <a href='mailto:nms@sportlp.ru'>nms@sportlp.ru</a>
-                    <p>420061, г. Казань, Оренбургский тракт, д. 160, офис 304</p>
+                    <p>420061, г. Казань, Оренбургский тракт,&nbsp;д.&nbsp;160, офис 304</p>
                 </div>
                 <div class='callback__content-container__second'>
                     <div class='callback__content-container__second-mobile'>
