--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -826,7 +826,7 @@
             <h2>Медиагалерея</h2>
             <div class="gallery__wrapper-items aos-init"data-aos="fade-up"data-aos-duration="1000">
                 <div class="gallery__wrapper-item gallery__wrapper-item--one ">
-                    <a href="">
+                    <a href="#">
                         <img src="./img/img1.webp" alt="" />
                     </a>
                 </div>
