--- a/src/partials/components/footer.hbs
+++ b/src/partials/components/footer.hbs
@@ -12,7 +12,7 @@
               </ul>
               <div class="footer__content-contacts">
                 <div>
-                  <a href=""
+                  <a href="#"
                     ><svg
                       width="30"
                       height="30"
@@ -28,7 +28,7 @@
                   </a>
                 </div>
                 <div>
-                  <a href=""
+                  <a href="#"
                     ><svg
                       width="30"
                       height="30"
@@ -44,7 +44,7 @@
                   </a>
                 </div>
                 <div>
-                  <a href=""
+                  <a href="#"
                     ><svg
                       width="30"
                       height="30"
@@ -60,7 +60,7 @@
                   </a>
                 </div>
                 <div>
-                  <a href=""
+                  <a href="#"
                     ><svg
                       width="30"
                       height="30"
