--- a/src/scss/components/why.scss
+++ b/src/scss/components/why.scss
@@ -6,6 +6,10 @@
         padding: 80px 0;
     }
 
+    @media (max-width: 499px) {
+        padding: 32px 0 64px;
+    }
+
     @keyframes animate_opacity {
         0% {
             transform: scale3d(1, 1, 1);
