--- a/src/pages/services.hbs
+++ b/src/pages/services.hbs
@@ -38,7 +38,7 @@
                         <img src="img/hand.png" alt="">
                         </div>
                         <div class="all__cards__item">
-                            <img src="img/car.png" alt="">
+                            <img src="img/car.webp" alt="">
                         </div>
                     </div>
            
