--- a/src/scss/components/conctacts.scss
+++ b/src/scss/components/conctacts.scss
@@ -2,6 +2,6 @@
     padding-top: 13rem;
 }
 .map_contacts {
-    background-image: url(../img/map.png);
+    background-image: url(../img/map.webp);
     background-size: cover;
 }
