--- a/src/scss/components/map.scss
+++ b/src/scss/components/map.scss
@@ -7,7 +7,7 @@
     }
 
     &__wrapper {
-        background-image: url(../img/map.png);
+        background-image: url(../img/map.webp);
         border-radius: 10px;
         padding: 16.3rem 0 14rem 9.8rem;
         position: relative;
