--- a/src/scss/components/overview.scss
+++ b/src/scss/components/overview.scss
@@ -10,7 +10,7 @@
        position: relative;
         display: flex;
         justify-content: center;
-        background-image: url(../img/video_img.png);
+        background-image: url(../img/video_img.webp);
         background-size: cover;
         background-repeat: no-repeat;
         border-radius: 10px;
