--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -2,7 +2,7 @@
 {{#content "main"}}
 <section class="intro">
     <picture>
-        <source srcset="img/intro-bg-mobile.jpg" media="(max-width: 420px)">
+        <source srcset="img/intro-bg-mobile.webp" media="(max-width: 420px)">
         <img class="intro__bg" src="img/intro-bg.jpg" alt="Умка">
     </picture>
     <div class="container">
@@ -75,7 +75,7 @@
         <div class="stats__inner">
             <div class="stats__list-wrapper">
                 <div class="hideOnDesktop">
-                    <img class="stats__img stats-img-1" src="img/stat-1.png" alt="Фото преимущества">
+                    <img class="stats__img stats-img-1" src="img/stat-1.webp" alt="Фото преимущества">
                 </div>
                 <ul class="stats__list">
                     <li class="stats__item-wrapper">
@@ -151,9 +151,9 @@
                 </ul>
                 <div class="stats__img-wrapper hideOnMobile">
                     <div class="stats__img-block">
-                        <img class="stats__img stats-img-1" src="img/stat-1.png" alt="Фото преимущества">
-                        <img class="stats__img stats-img-2 stats-img-hide" src="img/stat-2.png" alt="Фото преимущества">
-                        <img class="stats__img stats-img-3 stats-img-hide" src="img/stat-3.png" alt="Фото преимущества">
+                        <img class="stats__img stats-img-1" src="img/stat-1.webp" alt="Фото преимущества">
+                        <img class="stats__img stats-img-2 stats-img-hide" src="img/stat-2.webp" alt="Фото преимущества">
+                        <img class="stats__img stats-img-3 stats-img-hide" src="img/stat-3.webp" alt="Фото преимущества">
                     </div>
                 </div>
 
@@ -185,17 +185,17 @@
             </ul>
             <div class="features__img-slider">
                  <div class="features__img-slider">
-                <img  class="features__img-slide now" src="img/features-slider-1.jpg" alt="Фото слайдера">
-                <img class="features__img-slide" src="img/features-slider-1.jpg" alt="Фото слайдера">
+                <img  class="features__img-slide now" src="img/features-slider-1.webp" alt="Фото слайдера">
+                <img class="features__img-slide" src="img/features-slider-1.webp" alt="Фото слайдера">
             </div>
             </div>
             <div class="swiper fraturesswiper">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                        <img class="features__img-slide-hidden" src="img/features-slider-1.jpg" alt="Фото слайдера">
+                        <img class="features__img-slide-hidden" src="img/features-slider-1.webp" alt="Фото слайдера">
                     </div>
                     <div class="swiper-slide">
-                        <img class="features__img-slide-hidden" src="img/features-slider-1.jpg" alt="Фото слайдера">
+                        <img class="features__img-slide-hidden" src="img/features-slider-1.webp" alt="Фото слайдера">
                     </div>
                 </div>
                 <div class="swiper-pagination"></div>
@@ -229,7 +229,7 @@
                 </h3>
             </div>
             <div class="configure-poster__img">
-                <img src="img/configure-poster.png" alt="Разные типа оборудования">
+                <img src="img/configure-poster.webp" alt="Разные типа оборудования">
             </div>
         </div>
     </div>
@@ -780,7 +780,7 @@
     <div class="wide-container">
         <div class="expert__wrapper ">
             <div class="expert__man "  >
-                <img src="img/person.png" alt="Профессионал">
+                <img src="img/person.webp" alt="Профессионал">
             </div>
             <div class="expert__container-form ">
                 <div class="expert__expert-title">
@@ -1029,7 +1029,7 @@
                 </div>
                 <div class="reviews__inner_item swiper-slide autoheight">
                     <div class="reviews__inner_wrapper">
-                      <img src="./img/1.png" class="reviews__inner_item-img" alt="">
+                      <img src="./img/1.webp" class="reviews__inner_item-img" alt="">
                     </div>
                     <div class="reviews__inner_item-title">Идеальна для заливки арены хоккея с мячом</div>
                     <p>Менеджер компании погрузился и подобрал лучшую конфигурацию, которая актуальна не толкьо в зимний период, но и летом. Огромная благодарность за столь уникальную модель!</p>
@@ -1249,7 +1249,7 @@
 
                     <div class="all__cards">
                         <div class="all__cards__item now">
-                        <img src="img/hand.png" alt="">
+                        <img src="img/hand.webp" alt="">
                         </div>
                         <div class="all__cards__item">
                             <img src="img/car.webp" alt="">
@@ -1390,7 +1390,7 @@
                
                 <div class="plant__inner_thanks swiper">
                     <div class="swiper-wrapper">
-                    <img data-fancybox class="swiper-slide" src="./img/diplom1.jpg" alt="">
+                    <img data-fancybox class="swiper-slide" src="./img/diplom1.webp" alt="">
                     <img data-fancybox class="swiper-slide" src="./img/diplom2.webp" alt="">
                     <img data-fancybox class="swiper-slide" src="./img/diplom3.webp" alt="">
                 </div>
