--- a/src/scss/components/expert.scss
+++ b/src/scss/components/expert.scss
@@ -7,7 +7,7 @@
     }
 
     &__wrapper {
-        background: url(../img/block_7.jpg);
+        background: url(../img/block_7.webp);
         border-radius: 10px;
         padding: 8.2rem 0 6.5rem 55.8rem;
         position: relative;
