--- a/src/pages/services.hbs
+++ b/src/pages/services.hbs
@@ -35,7 +35,7 @@
             </div>
             <div class="all__cards">
                         <div class="all__cards__item now">
-                        <img src="img/hand.png" alt="">
+                        <img src="img/hand.webp" alt="">
                         </div>
                         <div class="all__cards__item">
                             <img src="img/car.webp" alt="">
