--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -3,7 +3,7 @@
 <section class="intro">
     <picture>
         <source srcset="img/intro-bg-mobile.webp" media="(max-width: 420px)">
-        <img class="intro__bg" src="img/intro-bg.jpg" alt="Умка">
+        <img class="intro__bg lazyload" data-src="img/intro-bg.jpg" alt="Умка">
     </picture>
     <div class="container">
 
@@ -75,7 +75,7 @@
         <div class="stats__inner">
             <div class="stats__list-wrapper">
                 <div class="hideOnDesktop">
-                    <img class="stats__img stats-img-1" src="img/stat-1.webp" alt="Фото преимущества">
+                    <img class="stats__img stats-img-1 lazyload" data-src="img/stat-1.webp" alt="Фото преимущества">
                 </div>
                 <ul class="stats__list">
                     <li class="stats__item-wrapper">
@@ -151,9 +151,9 @@
                 </ul>
                 <div class="stats__img-wrapper hideOnMobile">
                     <div class="stats__img-block">
-                        <img class="stats__img stats-img-1" src="img/stat-1.webp" alt="Фото преимущества">
-                        <img class="stats__img stats-img-2 stats-img-hide" src="img/stat-2.webp" alt="Фото преимущества">
-                        <img class="stats__img stats-img-3 stats-img-hide" src="img/stat-3.webp" alt="Фото преимущества">
+                        <img class="stats__img stats-img-1 lazyload" data-src="img/stat-1.webp" alt="Фото преимущества">
+                        <img class="stats__img stats-img-2 stats-img-hide lazyload" data-src="img/stat-2.webp" alt="Фото преимущества">
+                        <img class="stats__img stats-img-3 stats-img-hide lazyload" data-src="img/stat-3.webp" alt="Фото преимущества">
                     </div>
                 </div>
 
@@ -185,17 +185,17 @@
             </ul>
             <div class="features__img-slider">
                  <div class="features__img-slider">
-                <img  class="features__img-slide now" src="img/features-slider-1.webp" alt="Фото слайдера">
-                <img class="features__img-slide" src="img/features-slider-1.webp" alt="Фото слайдера">
+                <img  class="features__img-slide now lazyload" data-src="img/features-slider-1.webp" alt="Фото слайдера">
+                <img class="features__img-slide lazyload" data-src="img/features-slider-1.webp" alt="Фото слайдера">
             </div>
             </div>
             <div class="swiper fraturesswiper">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                        <img class="features__img-slide-hidden" src="img/features-slider-1.webp" alt="Фото слайдера">
+                        <img class="features__img-slide-hidden lazyload" data-src="img/features-slider-1.webp" alt="Фото слайдера">
                     </div>
                     <div class="swiper-slide">
-                        <img class="features__img-slide-hidden" src="img/features-slider-1.webp" alt="Фото слайдера">
+                        <img class="features__img-slide-hidden lazyload" data-src="img/features-slider-1.webp" alt="Фото слайдера">
                     </div>
                 </div>
                 <div class="swiper-pagination"></div>
@@ -229,7 +229,7 @@
                 </h3>
             </div>
             <div class="configure-poster__img">
-                <img src="img/configure-poster.webp" alt="Разные типа оборудования">
+                <img class="lazyload" data-src="img/configure-poster.webp" alt="Разные типа оборудования">
             </div>
         </div>
     </div>
@@ -780,7 +780,7 @@
     <div class="wide-container">
         <div class="expert__wrapper ">
             <div class="expert__man "  >
-                <img src="img/person.webp" alt="Профессионал">
+                <img class="lazyload" data-src="img/person.webp" alt="Профессионал">
             </div>
             <div class="expert__container-form ">
                 <div class="expert__expert-title">
@@ -827,27 +827,27 @@
             <div class="gallery__wrapper-items aos-init"data-aos="fade-up"data-aos-duration="1000">
                 <div class="gallery__wrapper-item gallery__wrapper-item--one ">
                     <a href="#">
-                        <img src="./img/img1.webp" alt="" />
+                        <img class="lazyload" data-src="./img/img1.webp" alt="" />
                     </a>
                 </div>
                 <div class="gallery__wrapper-item gallery__wrapper-item--two ">
-                    <img src="./img/img2.webp" alt="" />
+                    <img class="lazyload" data-src="./img/img2.webp" alt="" />
                 </div>
                 <div class="gallery__wrapper-item ">
-                    <img src="./img/img3.webp" alt="" />
+                    <img class="lazyload" data-src="./img/img3.webp" alt="" />
                 </div>
                 <div class="gallery__wrapper-item ">
-                    <img src="./img/img4.webp" alt="" />
+                    <img class="lazyload" data-src="./img/img4.webp" alt="" />
                 </div>
                 <div class="gallery__wrapper-item ">
-                    <img src="./img/img5.webp" alt="" />
+                    <img class="lazyload" data-src="./img/img5.webp" alt="" />
                 </div>
                 <div class="gallery__wrapper-item ">
-                    <img src="./img/img6.webp" alt="" />
+                    <img class="lazyload" data-src="./img/img6.webp" alt="" />
                 </div>
                 <div class="gallery__wrapper-item gallery__wrapper-item--link ">
                     <a href="media.html">
-                        <img src="./img/img7.png" alt="" />
+                        <img class="lazyload" data-src="./img/img7.png" alt="" />
                         <div class="gallery__wrapper-item-text">
                             <p>Перейти в медиагалерею</p>
                             <span>Более 30 фото<br>и видео материалов</span>
@@ -861,16 +861,16 @@
                         <div class="swiper-wrapper ">
                             <div class="swiper-slide gallery__wrapper-item--mobile-one">
                                 <a href="">
-                                    <img src="./img/img1.webp" alt="" />
+                                    <img class="lazyload" data-src="./img/img1.webp" alt="" />
                                 </a>
                             </div>
-                            <div class="swiper-slide"><img src="./img/img2.webp" alt="" /></div>
-                            <div class="swiper-slide"><img src="./img/img3.webp" alt="" /></div>
-                            <div class="swiper-slide"><img src="./img/img4.webp" alt="" /></div>
-                            <div class="swiper-slide"><img src="./img/img5.webp" alt="" /></div>
-                            <div class="swiper-slide"><img src="./img/img6.webp" alt="" /></div>
+                            <div class="swiper-slide"><img class="lazyload" data-src="./img/img2.webp" alt="" /></div>
+                            <div class="swiper-slide"><img class="lazyload" data-src="./img/img3.webp" alt="" /></div>
+                            <div class="swiper-slide"><img class="lazyload" data-src="./img/img4.webp" alt="" /></div>
+                            <div class="swiper-slide"><img class="lazyload" data-src="./img/img5.webp" alt="" /></div>
+                            <div class="swiper-slide"><img class="lazyload" data-src="./img/img6.webp" alt="" /></div>
                             <div class="swiper-slide"><a href="">
-                                    <img src="./img/img7.webp" alt="" />
+                                    <img class="lazyload" data-src="./img/img7.webp" alt="" />
 
                                 </a>
                             </div>
@@ -904,8 +904,8 @@
 
                     <div class="characters__tab-item tab-content_show">
 
-                        <img class="hidden-d" src="img/characters__image-isuzu.png" alt="">
-                        <img class="hidden-m" src="img/characters__image-isuzu-mobile.png" alt="">
+                        <img class="hidden-d lazyload" data-src="img/characters__image-isuzu.png" alt="">
+                        <img class="hidden-m lazyload" data-src="img/characters__image-isuzu-mobile.png" alt="">
                         <div class="characters_block-item hidden">
                             <div class="characters_block-item-title">
                                 3 м
@@ -942,8 +942,8 @@
                         </div>
                     </div>
                     <div class="characters__tab-item">
-                        <img class="hidden-d" src="img/characters__image-isuzu.png" alt="">
-                        <img class="hidden-m" src="img/characters__image-isuzu-mobile.png" alt="">
+                        <img class="hidden-d lazyload" data-src="img/characters__image-isuzu.png" alt="">
+                        <img class="hidden-m lazyload" data-src="img/characters__image-isuzu-mobile.png" alt="">
                         <div class="characters_block-item">
                             <div class="characters_block-item-title">
                                 3 м
@@ -984,12 +984,12 @@
                         
                             <a href="#callback-modal-expert "class="characters__button button aos-init"data-aos="fade-up-right"data-aos-duration="1000"> Консультация эксперта
                            
-                            <img src="img/image.png" alt=""></a>
+                            <img class="lazyload" data-src="img/image.png" alt=""></a>
 
                        <a href="#callback-doc"class="characters__button second button--light aos-init"data-aos="fade-up-left"data-aos-duration="1000">
                            <span class="hidden-d">Техническая документация </span> 
                            <span class="hidden-m">Тех. документация </span> 
-                            <img src="img/document.png" alt=""></a>
+                            <img class="lazyload" data-src="img/document.png" alt=""></a>
 
                         
                       
@@ -1029,7 +1029,7 @@
                 </div>
                 <div class="reviews__inner_item swiper-slide autoheight">
                     <div class="reviews__inner_wrapper">
-                      <img src="./img/1.webp" class="reviews__inner_item-img" alt="">
+                      <img data-src="./img/1.webp" class="reviews__inner_item-img lazyload" alt="">
                     </div>
                     <div class="reviews__inner_item-title">Идеальна для заливки арены хоккея с мячом</div>
                     <p>Менеджер компании погрузился и подобрал лучшую конфигурацию, которая актуальна не толкьо в зимний период, но и летом. Огромная благодарность за столь уникальную модель!</p>
@@ -1039,7 +1039,7 @@
                 </div>
                 <div class="reviews__inner_item swiper-slide autoheight">
                     <div class="reviews__inner_wrapper">
-                        <img src="./img/cover.png" class="reviews__inner_item-img" alt="">
+                        <img data-src="./img/cover.png" class="reviews__inner_item-img lazyload" alt="">
                     </div>
                     <div class="reviews__inner_item-title">Очень вместительная и производительная модель!</div>
                     <p>Подбирали модель для заливки на открытых катках, к нашему удивлению эта машина способна обрабатывать по 30 катков в день. Думаю это не предел, будем бить рекорды!</p>
@@ -1249,10 +1249,10 @@
 
                     <div class="all__cards">
                         <div class="all__cards__item now">
-                        <img src="img/hand.webp" alt="">
+                        <img class="lazyload" data-src="img/hand.webp" alt="">
                         </div>
                         <div class="all__cards__item">
-                            <img src="img/car.webp" alt="">
+                            <img class="lazyload" data-src="img/car.webp" alt="">
                         </div>
                     </div>
                 </div>
@@ -1261,12 +1261,12 @@
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide">
                                     <div class="all__cards-hiden">
-                                    <img src="img/hand.png" alt="">
+                                    <img class="lazyload" data-src="img/hand.webp" alt="">
                                     </div>
                                     </div>
                                     <div class="swiper-slide">
                                     <div class="all__cards-hiden">
-                                        <img src="img/car.webp" alt="">
+                                        <img class="lazyload" data-src="img/car.webp" alt="">
                                     </div>
                                     </div>
                                 </div>
@@ -1341,7 +1341,7 @@
         <div class="wide-container">
         <div class="plant__title">
             <div class="plant__title_inner"> <strong>Производитель умки</strong>
-            <img src="./img/logo_lip.png" alt="">
+            <img class="lazyload" data-src="./img/logo_lip.png" alt="">
         </div>             
             <h2>Липецкий Завод Малых Коммунальных Машин</h2>
            
@@ -1353,11 +1353,11 @@
                 <div class="swiper">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                        <img class="" src="./img/sl_lip.webp" alt="">
+                        <img class="lazyload" data-src="./img/sl_lip.webp" alt="">
                    
                     </div>
                       <div class="swiper-slide video">
-                       <a data-fancybox href="https://www.youtube.com/watch?v=kJZ7Bia772Q&feature=youtu.be&ab_channel=%D0%A1%D0%BF%D0%BE%D1%80%D1%82%D0%9B%D0%B0%D0%B9%D0%BD%D0%9F%D0%BE%D0%B2%D0%BE%D0%BB%D0%B6%D1%8C%D0%B5" class=""> <img class="" src="./img/sl_lip2.webp" alt="">
+                       <a data-fancybox href="https://www.youtube.com/watch?v=kJZ7Bia772Q&feature=youtu.be&ab_channel=%D0%A1%D0%BF%D0%BE%D1%80%D1%82%D0%9B%D0%B0%D0%B9%D0%BD%D0%9F%D0%BE%D0%B2%D0%BE%D0%BB%D0%B6%D1%8C%D0%B5" class=""> <img class="lazyload" data-src="./img/sl_lip2.webp" alt="">
                        <div class="video__icon">
                       <svg width="100" height="100" viewBox="0 0 100 100" fill="none" xmlns="http://www.w3.org/2000/svg">
 <circle cx="50" cy="50" r="50" fill="#1B74E3"/>
@@ -1390,7 +1390,7 @@
                
                 <div class="plant__inner_thanks swiper">
                     <div class="swiper-wrapper">
-                    <img data-fancybox class="swiper-slide" src="./img/diplom1.webp" alt="">
+                    <img data-fancybox class="swiper-slide " src="./img/diplom1.webp" alt="">
                     <img data-fancybox class="swiper-slide" src="./img/diplom2.webp" alt="">
                     <img data-fancybox class="swiper-slide" src="./img/diplom3.webp" alt="">
                 </div>
