--- a/src/scss/components/configure.scss
+++ b/src/scss/components/configure.scss
@@ -11,7 +11,7 @@
         grid-template-columns: repeat(12, 1fr);
         gap: 2.5rem;
         padding: calc(25px + (80 - 25) * (100vw - 360px) / (1680 - 360)) calc(15px + (97 - 15) * (100vw - 360px) / (1680 - 360));
-        background: linear-gradient(265.25deg, rgba(63, 137, 228, 0.9) 32.92%, rgba(63, 137, 228, 0.81) 70.46%), url('../img/configure-bg.png');
+        background: linear-gradient(265.25deg, rgba(63, 137, 228, 0.9) 32.92%, rgba(63, 137, 228, 0.81) 70.46%), url('../img/configure-bg.webp');
         background-size: cover;
         border-radius: 1rem;
         color: #fff;
