--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -380,7 +380,7 @@
                             <span class="configure__form-price">7 000 000 руб.</span>
                         </div>
                         <button class="configure__form-button button--light">
-                            Отправить заявку
+                            <a href="#callback-modal">Отправить заявку</a>
                             <svg>
                                 <use xlink:href="#message-icon"></use>
                             </svg>
