--- a/src/scss/components/popup.scss
+++ b/src/scss/components/popup.scss
@@ -373,6 +373,7 @@
     width: 21.9rem;
     margin-top: 4rem;
     padding: 3rem 2.5rem;
+    border: 1px solid #fff;
     @media (max-width: 767px) {
         width: unset;
         width: 100%;
