--- a/src/scss/components/configure.scss
+++ b/src/scss/components/configure.scss
@@ -623,6 +623,10 @@
         justify-content: space-between;
         align-items: center;
         padding: 2.5rem 2.5rem 2rem;
+
+        a:hover {
+            color: inherit;
+        }
         @media (max-width: 500px) {
             font-size: 2rem;
             padding: 1rem 2.5rem;
