--- a/src/scss/global/_variables.scss
+++ b/src/scss/global/_variables.scss
@@ -21,8 +21,8 @@
     --content-mobile-padding: 1.5rem;
 
     /* Font Family */
-    --main-ff: 'BebasNeue';
-    --secondary-ff: 'Montserrat';
+    --main-ff: 'BebasNeue', sans-serif;
+    --secondary-ff: 'Montserrat',  sans-serif;
 
     /* Font Weight */
     --bold: 700;
