--- a/src/scss/global/_global.scss
+++ b/src/scss/global/_global.scss
@@ -31,7 +31,7 @@ body {
     line-height: 1.2;
     display: flex;
     flex-direction: column;
-    font-family: 'Montserrat', sans-serif;
+    font-family: var(--main-ff);
     color: var(--main-primary);
 
     @media (min-width: 1750px) {
