--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -794,22 +794,23 @@
                         <input class="phone js-phone-input" required id="phone" type="tel" data-parsley-phone ><label for="phone">ваш
                             телефон</label>
                     </div>
-                    
-                    <a href="#success-modal-expert"class="button--light" >Отправить 
-                        <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path fill-rule="evenodd" clip-rule="evenodd"
-                                d="M17.469 31.1833L35.7807 21.4633C36.9624 20.8366 36.9624 19.15 35.7807 18.5216L17.4957 8.81665C16.1157 8.08331 14.569 9.46665 15.154 10.91L18.8024 19.91L15.124 29.0933C14.5474 30.5383 16.0924 31.9133 17.469 31.1833Z"
-                                stroke="#1B74E3" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-                            <path d="M18.8047 19.9167L36.6714 20" stroke="#1B74E3" stroke-width="2"
-                                stroke-linecap="round" stroke-linejoin="round" />
-                            <path d="M6.67188 24.9998H9.33854" stroke="#1B74E3" stroke-width="2" stroke-linecap="round"
-                                stroke-linejoin="round" />
-                            <path d="M5 19.9998H9.33333" stroke="#1B74E3" stroke-width="2" stroke-linecap="round"
-                                stroke-linejoin="round" />
-                            <path d="M3.33594 14.9998H9.33594" stroke="#1B74E3" stroke-width="2" stroke-linecap="round"
-                                stroke-linejoin="round" />
-                        </svg>
-               </a>
+                    <button href="#success-modal-expert" type="submit">
+                        <a class="button--light" >Отправить 
+                            <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd" clip-rule="evenodd"
+                                    d="M17.469 31.1833L35.7807 21.4633C36.9624 20.8366 36.9624 19.15 35.7807 18.5216L17.4957 8.81665C16.1157 8.08331 14.569 9.46665 15.154 10.91L18.8024 19.91L15.124 29.0933C14.5474 30.5383 16.0924 31.9133 17.469 31.1833Z"
+                                    stroke="#1B74E3" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                                <path d="M18.8047 19.9167L36.6714 20" stroke="#1B74E3" stroke-width="2"
+                                    stroke-linecap="round" stroke-linejoin="round" />
+                                <path d="M6.67188 24.9998H9.33854" stroke="#1B74E3" stroke-width="2" stroke-linecap="round"
+                                    stroke-linejoin="round" />
+                                <path d="M5 19.9998H9.33333" stroke="#1B74E3" stroke-width="2" stroke-linecap="round"
+                                    stroke-linejoin="round" />
+                                <path d="M3.33594 14.9998H9.33594" stroke="#1B74E3" stroke-width="2" stroke-linecap="round"
+                                    stroke-linejoin="round" />
+                            </svg>
+                        </a>
+                    </button>
                 </form>
                 <div class="expert__agree">
                     <div class="expert__agree-star">*</div>
