--- a/src/partials/components/formContacts.hbs
+++ b/src/partials/components/formContacts.hbs
@@ -139,8 +139,8 @@
                             <div class='callback__item'>
                                 <input class='phone js-phone-input' required type='tel' id='phone1' data-parsley-phone /><label for='phone1'>ваш телефон</label>
                             </div>
-                            <button type='submit'>
-                                <a href='#success-modal' class='button--light'>Отправить
+                            <button href='#success-modal' type='submit'>
+                                <a class='button--light'>Отправить
 
                                     <svg width='36' height='26' viewBox='0 0 36 26' fill='none' xmlns='http://www.w3.org/2000/svg'>
                                         <path
