--- a/src/partials/components/modals.hbs
+++ b/src/partials/components/modals.hbs
@@ -127,7 +127,7 @@
             <div class='form-desk animate-top'>
                 Наш менеджер свяжется с вами в ближайшее время</div>
         </div>
-        <a class="button--light" href="#callback-modal">Отправить еще раз</a>
+        <button class="button--light closeModal">Отлично</button>
 
     </div>
 </div>
@@ -153,8 +153,7 @@
             <div class='form-desk animate-top'>
                 Мы вышлем вам документацию на указанную электронную почту в ближайшее время</div>
         </div>
-        <button class="button--light">
-        <a  href="#callback-doc">Отправить еще раз</a></button>
+        <button class="button--light closeModal">Отлично</button>
 
     </div>
 </div>
@@ -237,8 +236,7 @@
 Наш эксперт свяжется с вами
 в ближайшее время        </div>
         
-         <button class="button--light">
-        <a  href="#callback-expert">Отправить еще раз</a></button>
+         <button class="button--light closeModal">Отлично</button>
 
     </div>
 </div>
