--- a/src/partials/components/form.hbs
+++ b/src/partials/components/form.hbs
@@ -87,8 +87,8 @@
                             <div class='callback__item'>
                                 <input class='phone js-phone-input' required type='tel' id='phone1' data-parsley-phone /><label for='phone1'>ваш телефон</label>
                             </div>
-                            <button type='submit'>
-                                <a href='#success-modal' class='button--light'>Отправить
+                            <button href='#success-modal' type='submit'>
+                                <a class='button--light'>Отправить
 
                                     <svg width='40' height='40' viewBox='0 0 40 40' fill='none' xmlns='http://www.w3.org/2000/svg'>
                                         <path
