--- a/src/scss/components/all.scss
+++ b/src/scss/components/all.scss
@@ -205,7 +205,7 @@
         display: flex;
     }
 
-    &__three__elements button {
+    &__three__elements a{
         // padding: 3rem 3rem 3rem 2.5rem;
         width: 43.5rem;
         justify-content: space-between;
