add lazy load in media

--- a/src/pages/services.hbs
+++ b/src/pages/services.hbs
@@ -22,16 +22,16 @@
                     </div>
 
                 </div>
-                <a class="button" href="#callback-modal-expert">Записаться на ТО
-                   <svg width="41" height="40" viewBox="0 0 41 40" fill="none" xmlns="http://www.w3.org/2000/svg">
-<path fill-rule="evenodd" clip-rule="evenodd" d="M35.8408 26.6748V8.33317C35.8408 7.41317 35.0942 6.6665 34.1742 6.6665H7.50749C6.58749 6.6665 5.84082 7.41317 5.84082 8.33317V33.3332L15.6892 28.4332L34.1825 28.3415C35.0992 28.3365 35.8408 27.5915 35.8408 26.6748Z" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-<path d="M12.5068 12.7058H28.5068" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-<path d="M12.5068 21.906H23.7068" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-<path d="M12.5068 17.3059H23.7068" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-</svg>
-
-
-                </a>
+                <button class="button">
+                    <a  href="#callback-modal-expert"></a>
+                    Записаться на ТО
+                    <svg width="41" height="40" viewBox="0 0 41 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M35.8408 26.6748V8.33317C35.8408 7.41317 35.0942 6.6665 34.1742 6.6665H7.50749C6.58749 6.6665 5.84082 7.41317 5.84082 8.33317V33.3332L15.6892 28.4332L34.1825 28.3415C35.0992 28.3365 35.8408 27.5915 35.8408 26.6748Z" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        <path d="M12.5068 12.7058H28.5068" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        <path d="M12.5068 21.906H23.7068" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        <path d="M12.5068 17.3059H23.7068" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+                </button>
             </div>
             <div class="all__cards">
                         <div class="all__cards__item now">
