--- a/src/partials/components/headertwink.hbs
+++ b/src/partials/components/headertwink.hbs
@@ -26,9 +26,9 @@
                         </li>
                         {{/each}} --}}
                         <li> <a href="index.html"> О модели</a> </li>
-                        <li> <a href="services.html"> Сервис </a> </li>
-                        <li> <a href="media.html"> Медиагалерея </a> </li>
-                        <li> <a href="contacts.html"> Контакты </a> </li>
+                        <li data-page="services"> <a href="services.html"> Сервис </a> </li>
+                        <li data-page="media"> <a href="media.html"> Медиагалерея </a> </li>
+                        <li data-page="contacts"> <a href="contacts.html"> Контакты </a> </li>
                     </ul>
                 </nav>
             </div>
