--- a/src/pages/media.hbs
+++ b/src/pages/media.hbs
@@ -22,7 +22,7 @@
               <div class="card video">
                 <div class="cart__video">
                     <a href="https://www.youtube.com/watch?v=kJZ7Bia772Q&feature=youtu.be&ab_channel=%D0%A1%D0%BF%D0%BE%D1%80%D1%82%D0%9B%D0%B0%D0%B9%D0%BD%D0%9F%D0%BE%D0%B2%D0%BE%D0%BB%D0%B6%D1%8C%D0%B5" data-fancybox >
-                  <img src="./img/v1.png" alt="" />
+                  <img class="lazyload" data-src="./img/v1.png" alt="" />
                   <svg
                     width="56"
                     height="55"
@@ -44,7 +44,7 @@
               <div class="card video">
                 <div class="cart__video">
                      <a href="https://www.youtube.com/watch?v=kJZ7Bia772Q&feature=youtu.be&ab_channel=%D0%A1%D0%BF%D0%BE%D1%80%D1%82%D0%9B%D0%B0%D0%B9%D0%BD%D0%9F%D0%BE%D0%B2%D0%BE%D0%BB%D0%B6%D1%8C%D0%B5" data-fancybox >
-                  <img src="./img/v5.png" alt="" />
+                  <img class="lazyload" data-src="./img/v5.png" alt="" />
                   <svg
                     width="56"
                     height="55"
@@ -63,40 +63,40 @@
                 <p>Обзор УМКИ на базе УАЗ</p>
               </div>
               <div class="card images">
-                <a data-fancybox href="./img/img3_big.jpg"><img  src="./img/5.png" alt="" /></a>
+                <a data-fancybox href="./img/img3_big.jpg"><img class="lazyload" data-src="./img/5.png" alt="" /></a>
               </div>
               <div class="card images">
-                <a data-fancybox href="./img/img2_big.jpg"><img src="./img/2.png" alt="" /></a>
+                <a data-fancybox href="./img/img2_big.jpg"><img class="lazyload" data-src="./img/2.png" alt="" /></a>
               </div>
               <div class="card images">
-                <a data-fancybox href="./img/img10_big.jpg"><img src="./img/7.png" alt="" /></a>
+                <a data-fancybox href="./img/img10_big.jpg"><img class="lazyload" data-src="./img/7.png" alt="" /></a>
               </div>
               <div class="card images">
-                <a data-fancybox href="./img/img10_big.jpg"><img src="./img/7.png" alt="" /></a>
+                <a data-fancybox href="./img/img10_big.jpg"><img class="lazyload" data-src="./img/7.png" alt="" /></a>
               </div>
 
               <div class="card images">
-                <a data-fancybox href="./img/img13_big.jpg"><img src="./img/8.png" alt="" /></a>
+                <a data-fancybox href="./img/img13_big.jpg"><img class="lazyload" data-src="./img/8.png" alt="" /></a>
               </div>
               <div class="card images">
-                <a data-fancybox href="./img/img3_big.jpg"><img src="./img/5.png" alt="" /></a>
+                <a data-fancybox href="./img/img3_big.jpg"><img class="lazyload" data-src="./img/5.png" alt="" /></a>
               </div>
               <div class="card images">
-                <a data-fancybox href="./img/img6_big.jpg"><img  src="./img/6.png" alt="" /></a>
+                <a data-fancybox href="./img/img6_big.jpg"><img class="lazyload" data-src="./img/6.png" alt="" /></a>
               </div>
               <div class="card images">
-                <a data-fancybox href="./img/img10_big.jpg"><img   src="./img/7.png" alt="" /></a>
+                <a data-fancybox href="./img/img10_big.jpg"><img class="lazyload" data-src="./img/7.png" alt="" /></a>
               </div>
               <div class="card images">
-                <a data-fancybox href="./img/img13_big.jpg"><img src="./img/8.png" alt="" /></a>
+                <a data-fancybox href="./img/img13_big.jpg"><img class="lazyload" data-src="./img/8.png" alt="" /></a>
               </div>
               <div class="card images">
-                <a data-fancybox href="./img/img7_big.jpg"><img src="./img/9.png" alt="" /></a>
+                <a data-fancybox href="./img/img7_big.jpg"><img class="lazyload" data-src="./img/9.png" alt="" /></a>
               </div>
               <div class="card video">
                 <div class="cart__video">
                    <a href="https://www.youtube.com/watch?v=kJZ7Bia772Q&feature=youtu.be&ab_channel=%D0%A1%D0%BF%D0%BE%D1%80%D1%82%D0%9B%D0%B0%D0%B9%D0%BD%D0%9F%D0%BE%D0%B2%D0%BE%D0%BB%D0%B6%D1%8C%D0%B5" data-fancybox >
-                  <img  src="./img/v3.png" alt="" />
+                  <img class="lazyload" data-src="./img/v3.png" alt="" />
                   <svg
                     width="56"
                     height="55"
@@ -116,13 +116,13 @@
               </div>
 
               <div class="card images">
-                <a data-fancybox href="./img/img11_big.jpg"><img src="./img/10.png" alt="" /></a>
+                <a data-fancybox href="./img/img11_big.jpg"><img class="lazyload" data-src="./img/10.png" alt="" /></a>
               </div>
 
               <div class="card video">
                 <div class="cart__video">
                     <a href="https://www.youtube.com/watch?v=kJZ7Bia772Q&feature=youtu.be&ab_channel=%D0%A1%D0%BF%D0%BE%D1%80%D1%82%D0%9B%D0%B0%D0%B9%D0%BD%D0%9F%D0%BE%D0%B2%D0%BE%D0%BB%D0%B6%D1%8C%D0%B5" data-fancybox >
-                  <img  src="./img/v3.png" alt="" />
+                  <img class="lazyload" data-src="./img/v3.png" alt="" />
                   <svg
                     width="56"
                     height="55"
@@ -142,19 +142,19 @@
               </div>
 
               <div class="card images">
-                <a data-fancybox href="./img/img5_big.jpg"><img src="./img/11.png" alt="" /></a>
+                <a data-fancybox href="./img/img5_big.jpg"><img class="lazyload" data-src="./img/11.png" alt="" /></a>
               </div>
               <div class="card images">
-                <a data-fancybox href="./img/img7_big.jpg"><img src="./img/9.png" alt="" /></a>
+                <a data-fancybox href="./img/img7_big.jpg"><img class="lazyload" data-src="./img/9.png" alt="" /></a>
               </div>
               <div class="card images">
-                <a data-fancybox href="./img/img13_big.jpg"><img src="./img/8.png" alt="" /></a>
+                <a data-fancybox href="./img/img13_big.jpg"><img class="lazyload" data-src="./img/8.png" alt="" /></a>
               </div>
 
               <div class="card video">
                 <div class="cart__video">
                   <a href="https://www.youtube.com/watch?v=kJZ7Bia772Q&feature=youtu.be&ab_channel=%D0%A1%D0%BF%D0%BE%D1%80%D1%82%D0%9B%D0%B0%D0%B9%D0%BD%D0%9F%D0%BE%D0%B2%D0%BE%D0%BB%D0%B6%D1%8C%D0%B5" data-fancybox >
-                  <img  src="./img/v4.png" alt="" />
+                  <img  class="lazyload" data-src="./img/v4.png" alt="" />
                   <svg
                     width="56"
                     height="55"
@@ -173,13 +173,13 @@
                 <p>Видео с производства</p>
               </div>
               <div class="card images">
-                <a data-fancybox href="./img/img3_big.jpg"><img  src="./img/5.png" alt="" /></a>
+                <a data-fancybox href="./img/img3_big.jpg"><img  class="lazyload" data-src="./img/5.png" alt="" /></a>
               </div>
               <div class="card images">
-                <a data-fancybox href="./img/img3_big.jpg"><img src="./img/5.png" alt="" /></a>
+                <a data-fancybox href="./img/img3_big.jpg"><img class="lazyload" data-src="./img/5.png" alt="" /></a>
               </div>
             </div>
-            <button id="loadMore" class="button--light">
+            <a id="loadMore" class="button--light">
               Загрузить больше
               <svg
                 width="41"
@@ -221,7 +221,7 @@
                   stroke-linejoin="round"
                 />
               </svg>
-            </button>
+            </a>
           </div>
      
       </div>
