--- a/src/scss/components/services.scss
+++ b/src/scss/components/services.scss
@@ -90,6 +90,14 @@
         max-width: 25.5rem;
         width: 100%;
         padding: 2rem;
+        position: relative;
+
+        a {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            left: 0;
+        }
         @media (max-width: 533px) {
             margin-top: 2.6rem;
             max-width: unset;
