--- a/src/scss/components/features.scss
+++ b/src/scss/components/features.scss
@@ -187,6 +187,7 @@
             display: block;
             order: -1;
             width: 70rem;
+            min-height: 551px;
         }
     }
 
