--- a/src/scss/components/characters.scss
+++ b/src/scss/components/characters.scss
@@ -102,6 +102,7 @@
         }
         @media (max-width: 1000px) {
             flex-wrap: wrap;
+            align-items: flex-start;
         }
     }
 
